@@ -5,7 +5,8 @@ Changelog
 1.4.0b2 (unreleased)
 ====================
 
-- Nothing changed yet.
+- Fix multiple platforms per environment backward compatibility: honor global
+  platform definition.
 
 
 1.4.0b1 (2016-12-13)
@@ -15,7 +16,8 @@ Changelog
 
 - added --reset switch to batou
 
-- Added a way to customize how supervisor is started on different platforms via `start()` on a Service platform component.
+- Added a way to customize how supervisor is started on different platforms via
+  `start()` on a Service platform component.
 
 1.3.5 (2016-12-06)
 ==================
